--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Portfolio | Sven ten Haaf</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/89f2f44ba07ea3fff7e561c2142813b278c2d6c6/devicon.min.css">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -20,8 +21,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Sven ten Haaf</a></h1>
-					<p>Software Developer by day<br />
-					Jazz musician by night</p>
+					<p>Software Developer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -51,26 +51,30 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>Hi there</h2>
+										<p>I'm Sven, and I'm a software developer.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I'm a developer with experience in Ruby, JavaScript, React / Flux, HTML / CSS, RESTful APIs and MVC architecture, and I have a background in structural / mechanical engineering.
+										I started coding at university in Matlab, always kept using code in professional life, and eventually decided to switch to full-time software.
+										When I'm not coding, I love to play music, go skiing, or go out for a run.
+
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Skills</h3>
+									<p>I've always had a tendency to solve abstract, complex problems and being able to communicate them with other people.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="devicon-ruby-plain"><span>Ruby</span></li>
+										<li class="devicon-rails-plain">Rails</li>
+										<li class="devicon-javascript-plain">Javascript</li>
+										<li class="devicon-react-original">React</li>
+										<li class="devicon-postgresql-plain">SQL</li>
+										<li class="devicon-git-plain">git</li>
+										<li class="devicon-html5-plain">HTML</li>
+										<li class="devicon-css3-plain">CSS</li>
 									</ul>
 								</div>
 							</section>
@@ -78,28 +82,31 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Portfolio</h3>
+									<p>Have a look at some of the stuff I made. Check out their live links and/or the Github page</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/moonshot.png" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Moonshot</h4>
+												<p>Javascript game similar to Angry Birds, but with gravity simulation from planets. Pure JS, no libraries used.
+												<br><br><strong><a href="moonshot.html"> Live Link </a>| <a href="https://github.com/Sventenhaaf/Moonshot"> Github</a></strong></p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/codesven.png" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>CodeSven</h4>
+												<p>Full-Stack web application that lets users create, run and share Javascript snippets in the browser. Applied React framework and Flux design pattern, together with a Rails app and JSON API in the backend.
+												<br><strong><a href="https://safe-chamber-3991.herokuapp.com"> Live Link </a>| <a href="https://github.com/Sventenhaaf/CodeSven"> Github</a></strong></p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/chess.png" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Ruby Chess</h4>
+												<p>Chess game written in Ruby. Used class inheritance and modules to keep code DRY.
+												<br><strong><a href="https://github.com/Sventenhaaf/Ruby-Chess"> Github</a></strong></p>
 											</div>
 										</article>
 									</div>
