--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Skills</a></li>
-						<li><a href="#three">Portfolio</a></li>
+						<li><a href="#two">Portfolio</a></li>
+						<li><a href="#three">Background</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/Sventenhaaf" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://nl.linkedin.com/in/sventenhaaf" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://www.facebook.com/sventenhaaf" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="mailto:sventenhaaf@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -53,11 +53,18 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hi there</h2>
-										<p>I'm Sven, and I'm a software developer.</p>
 									</header>
-									<p>I'm a developer with experience in Ruby, JavaScript, React / Flux, HTML / CSS, RESTful APIs and MVC architecture, and I have a background in structural / mechanical engineering.
-										I started coding at university in Matlab, always kept using code in professional life, and eventually decided to switch to full-time software.
-										When I'm not coding, I love to play music, go skiing, or go out for a run.
+									<p>I'm Sven, software developer with experience in the following technologies:</p>
+									<ul class="feature-icons">
+										<li class="devicon-ruby-plain"><span>Ruby</span></li>
+										<li class="devicon-rails-plain">Rails</li>
+										<li class="devicon-javascript-plain">Javascript</li>
+										<li class="devicon-react-original">React / Flux</li>
+										<li class="devicon-postgresql-plain">SQL</li>
+										<li class="devicon-git-plain">git</li>
+										<li class="devicon-html5-plain">HTML</li>
+										<li class="devicon-css3-plain">CSS</li>
+									</ul>
 
 								</div>
 							</section>
@@ -65,29 +72,11 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Skills</h3>
-									<p>I've always had a tendency to solve abstract, complex problems and being able to communicate them with other people.</p>
-									<ul class="feature-icons">
-										<li class="devicon-ruby-plain"><span>Ruby</span></li>
-										<li class="devicon-rails-plain">Rails</li>
-										<li class="devicon-javascript-plain">Javascript</li>
-										<li class="devicon-react-original">React</li>
-										<li class="devicon-postgresql-plain">SQL</li>
-										<li class="devicon-git-plain">git</li>
-										<li class="devicon-html5-plain">HTML</li>
-										<li class="devicon-css3-plain">CSS</li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
 									<h3>Portfolio</h3>
 									<p>Have a look at some of the stuff I made. Check out their live links and/or the Github page</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/moonshot.png" alt="" /></a>
+											<a href="moonshot.html" class="image"><img src="images/moonshot.png" alt="" /></a>
 											<div class="inner">
 												<h4>Moonshot</h4>
 												<p>Javascript game similar to Angry Birds, but with gravity simulation from planets. Pure JS, no libraries used.
@@ -95,7 +84,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/codesven.png" alt="" /></a>
+											<a href="https://safe-chamber-3991.herokuapp.com" class="image"><img src="images/codesven.png" alt="" /></a>
 											<div class="inner">
 												<h4>CodeSven</h4>
 												<p>Full-Stack web application that lets users create, run and share Javascript snippets in the browser. Applied React framework and Flux design pattern, together with a Rails app and JSON API in the backend.
@@ -103,44 +92,68 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/chess.png" alt="" /></a>
+											<a href="https://github.com/Sventenhaaf/Ruby-Chess" class="image"><img src="images/chess.png" alt="" /></a>
 											<div class="inner">
 												<h4>Ruby Chess</h4>
-												<p>Chess game written in Ruby. Used class inheritance and modules to keep code DRY.
-												<br><strong><a href="https://github.com/Sventenhaaf/Ruby-Chess"> Github</a></strong></p>
+												<p>Chess game written in Ruby. Used class inheritance and modules to keep code DRY. To be played in pry or irb.
+												<br><br><strong><a href="https://github.com/Sventenhaaf/Ruby-Chess"> Github</a></strong></p>
 											</div>
 										</article>
 									</div>
 								</div>
 							</section>
 
+						<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h3>Background</h3>
+									<p>I'm a developer with experience in Ruby, JavaScript, React / Flux, HTML / CSS, RESTful APIs and MVC architecture, and I have a background in structural / mechanical engineering.
+										I started coding at university in Matlab, always kept using code in professional life, and eventually decided to switch to full-time software.
+										When I'm not coding, I love to play music, go skiing, or go out for a run.
+								</div>
+
+							</section>
+
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row uniform">
-											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u">
-												<ul class="actions">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<p>If you are interested and want to know more about me, let's <strong><a href="mailto:sventenhaaf@gmail.com">get in touch</a></strong>.</p>
+
 								</div>
 							</section>
+
+
+
+<!--
+EMAIL FORM FOR AT THE BOTTOM
+
+							<form method="post" action="#">
+								<div class="row uniform">
+									<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+									<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+								</div>
+								<div class="row uniform">
+									<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+								</div>
+								<div class="row uniform">
+									<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+								</div>
+								<div class="row uniform">
+									<div class="12u">
+										<ul class="actions">
+											<li><input type="submit" class="special" value="Send Message" /></li>
+											<li><input type="reset" value="Reset Form" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+
+
+END OF EMAIL FORM -->
+
+
+
 
 						<!-- Five -->
 						<!--
