--- a/moonshot.html
+++ b/moonshot.html
@@ -11,13 +11,8 @@
     <div id="levelnavigation">
       <br>
       <span><h2>Moonshot | Aim for the moon!</h2></span>
-      <div id="levelnav">
-        <button class="navbtn">Previous</button>
-        Level 1
-        <button class="navbtn">Next</button>
-      </div>
-
-
+      <p>Click and drag on the screen to catapult the blue spacecraft to the moon - but beware for the gravity of the gray planets!</p>
+      
     <canvas id="canvas" width="1300" height="600" >This text is displayed if your browser does not support HTML5 Canvas.</canvas><br>
 
   </body>
