--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio | Sven ten Haaf</title>
+		<title>Portfolio - Old | Sven ten Haaf</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="node_modules/devicon/devicon.css">
