changed d3 dir in subfiles

--- a/artists.html
+++ b/artists.html
@@ -20,7 +20,8 @@
   </div>
 
   <!-- D3 LIBRARY -->
-  <script src="_/d3.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <!-- <script src="_/d3.min.js"></script> -->
   <script src="_/jquery.min.js"></script>
   <script src="similr.js"></script>
 </body>
