--- a/dynamics.html
+++ b/dynamics.html
@@ -19,6 +19,8 @@
 
   <!-- D3 LIBRARY -->
   <script src="_/d3.min.js"></script>
+
+  <!-- <script src="_/d3.min.js"></script> -->
   <script src="_/jquery.min.js"></script>
 
   <!-- DYNAMICS JS -->
