--- a/algorithms.html
+++ b/algorithms.html
@@ -78,7 +78,9 @@
   </div>
 
   <!-- D3 LIBRARY -->
-  <script src="_/d3.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+  <!-- <script src="_/d3.min.js"></script> -->
   <script src="_/jquery.min.js"></script>
 
   <!-- SORTING JS -->
