--- a/connectedartists.html
+++ b/connectedartists.html
@@ -29,6 +29,8 @@
 
   <!-- D3 LIBRARY -->
   <script src="_/d3.min.js"></script>
+
+  <!-- <script src="_/d3.min.js"></script> -->
   <script src="_/jquery.min.js"></script>
 
   <!-- SORTING JS -->
