changed underscore folder name

--- a/algorithms.html
+++ b/algorithms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>D3 Graphic</title>
-  <link rel="stylesheet" href="_/base.css">
+  <link rel="stylesheet" href="extlib/base.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type="text/css" href="grid.css">
 
@@ -80,8 +80,8 @@
   <!-- D3 LIBRARY -->
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
-  <!-- <script src="_/d3.min.js"></script> -->
-  <script src="_/jquery.min.js"></script>
+  <!-- <script src="extlib/d3.min.js"></script> -->
+  <script src="extlib/jquery.min.js"></script>
 
   <!-- SORTING JS -->
   <script src="bubblesort.js"></script>
