--- a/connectedartists.html
+++ b/connectedartists.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Connected Artists</title>
-  <link rel="stylesheet" href="_/base.css">
+  <link rel="stylesheet" href="extlib/base.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type="text/css" href="grid.css">
   <link rel="icon" href="favicon-32x32.png">
@@ -28,10 +28,10 @@
 </section>
 
   <!-- D3 LIBRARY -->
-  <script src="_/d3.min.js"></script>
+  <script src="extlib/d3.min.js"></script>
 
-  <!-- <script src="_/d3.min.js"></script> -->
-  <script src="_/jquery.min.js"></script>
+  <!-- <script src="extlib/d3.min.js"></script> -->
+  <script src="extlib/jquery.min.js"></script>
 
   <!-- SORTING JS -->
   <script src="similr.js"></script>
