--- a/dynamics.html
+++ b/dynamics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>D3 Graphic</title>
-  <link rel="stylesheet" href="_/base.css">
+  <link rel="stylesheet" href="extlib/base.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,10 +18,8 @@
   <div class="settings"></div>
 
   <!-- D3 LIBRARY -->
-  <script src="_/d3.min.js"></script>
-
-  <!-- <script src="_/d3.min.js"></script> -->
-  <script src="_/jquery.min.js"></script>
+  <script src="extlib/d3.min.js"></script>
+  <script src="extlib/jquery.min.js"></script>
 
   <!-- DYNAMICS JS -->
   <script src="motion.js"></script>
