still trying start and stop button

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sven ten Haaf | TESTPortfolio</title>
+    <title>Sven ten Haaf | Portfolio</title>
     <!-- <script src="http://d3js.org/d3.v3.min.js"  charset="utf-8"></script> -->
     <!-- <script src="_/d3min.js"  charset="utf-8"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
