--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           data-tooltip="Over the weekend, with a team of 10 App Academy
           students, we used the Uber and Slack APIs to build an app that lets
           you request an Uber ride using a slack command - no need to pull out
-          your phone anymore.">
+          your phone anymore." target="_blank">
           Uber-Slack</a></h3>
         <h3><a href="https://github.com/Sventenhaaf/Ruby-Chess"
           data-tooltip="Developed a Chess game that can be played in the Ruby
@@ -65,7 +65,7 @@
         <h3><a href="https://safe-chamber-3991.herokuapp.com/#/?_k=1zlp3k"
           data-tooltip="Full-Stack application using Rails and React, that lets
           users write and run Javascript in the browser, and like and share
-          their code snippets withother people.">CodeSven</a></h3>
+          their code snippets withother people." target="_blank">CodeSven</a></h3>
         <br>
       </section>
     </div>
