cleaned up folder structure

--- a/algorithms.html
+++ b/algorithms.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>D3 Graphic</title>
-  <link rel="stylesheet" href="extlib/base.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" type="text/css" href="grid.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/grid.css">
 
 </head>
 <body>
@@ -62,7 +61,8 @@
       <br>
       <form>
         Array Size: <span id="arrayvalue">…</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        5 <input type="range" name="points" min="5" max="50" value="10" id="arraysize"> 50 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        5 <input type="range" name="points" min="5" max="50" value="10" id="arraysize">
+         50 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         Calculation Time [ms]: <span id="speed-value">…</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         20<input type="range" name="points" min="20" max="1000" value="750" id="speed">1000
 
@@ -78,14 +78,11 @@
   </div>
 
   <!-- D3 LIBRARY -->
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-
-  <!-- <script src="extlib/d3.min.js"></script> -->
-  <script src="extlib/jquery.min.js"></script>
+  <script src="js/d3.min.js" charset="utf-8"></script>
+  <script src="js/jquery.min.js"></script>
 
   <!-- SORTING JS -->
-  <script src="bubblesort.js"></script>
-  <!-- <script src="quicksort.js"></script> -->
+  <script src="js/algorithms.js"></script>
 
 </body>
 </html>
