--- a/moonshot.html
+++ b/moonshot.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="moonshot.css">
+    <link rel="stylesheet" type="text/css" href="css/moonshot.css">
     <title>Moonshot | JS Game</title>
-    <script type="text/javascript" src="ball.js">
+    <script type="text/javascript" src="js/moonshot.js">
     </script>
   </head>
   <body>
