--- a/motion.html
+++ b/motion.html
@@ -3,14 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>D3 Graphic</title>
-  <link rel="stylesheet" href="extlib/base.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-  <div id="artistInfo"></div>
-  <div id="cloud"></div>
-  <div id="error"></div>
 
   <!-- DYNAMIC SYSTEM SIMULATOR -->
   <div class="controlPanel"></div>
@@ -18,11 +13,10 @@
   <div class="settings"></div>
 
   <!-- D3 LIBRARY -->
-  <script src="extlib/d3.min.js"></script>
-  <script src="extlib/jquery.min.js"></script>
-
+  <script src="js/d3.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <!-- DYNAMICS JS -->
-  <script src="motion.js"></script>
+  <script src="js/motion.js"></script>
 
 </body>
 </html>
