--- a/connectedartists.html
+++ b/connectedartists.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Connected Artists</title>
-  <link rel="stylesheet" href="extlib/base.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" type="text/css" href="grid.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/grid.css">
   <link rel="icon" href="favicon-32x32.png">
-
-  <!-- <link rel="shortcut icon" type="image/ico" href="favicon.ico"/> -->
 </head>
 <body>
   <section>
@@ -27,15 +24,9 @@
 
 </section>
 
-  <!-- D3 LIBRARY -->
-  <script src="extlib/d3.min.js"></script>
-
-  <!-- <script src="extlib/d3.min.js"></script> -->
-  <script src="extlib/jquery.min.js"></script>
-
-  <!-- SORTING JS -->
-  <script src="similr.js"></script>
-  <!-- <script src="quicksort.js"></script> -->
-
+  <!-- JS -->
+  <script src="js/d3.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/connectedartists.js"></script>
 </body>
 </html>
