--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Sven ten Haaf | Portfolio</title>
-    <!-- <script src="http://d3js.org/d3.v3.min.js"  charset="utf-8"></script> -->
-    <!-- <script src="_/d3min.js"  charset="utf-8"></script> -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="favicon-32x32.png">
-
-    <!-- <link rel="stylesheet" type="text/css" href="social.css"> -->
   </head>
   <body>
     <header>
@@ -24,10 +20,8 @@
           <li><a href="https://www.linkedin.com/in/sventenhaaf" class="icon-17 linkedin" title="LinkedIn"><svg viewBox="0 0 512 512"><path d="M186.4 142.4c0 19-15.3 34.5-34.2 34.5 -18.9 0-34.2-15.4-34.2-34.5 0-19 15.3-34.5 34.2-34.5C171.1 107.9 186.4 123.4 186.4 142.4zM181.4 201.3h-57.8V388.1h57.8V201.3zM273.8 201.3h-55.4V388.1h55.4c0 0 0-69.3 0-98 0-26.3 12.1-41.9 35.2-41.9 21.3 0 31.5 15 31.5 41.9 0 26.9 0 98 0 98h57.5c0 0 0-68.2 0-118.3 0-50-28.3-74.2-68-74.2 -39.6 0-56.3 30.9-56.3 30.9v-25.2H273.8z"/></svg><!--[if lt IE 9]><em>LinkedIn</em><![endif]--></a></li>
         </ul>
       </div>
-
       <div width="400" height="100" class="text"></div>
     </header>
-
     <div id="content">
       <section id="section1">
         <h2>D3.js</h2>
@@ -38,7 +32,7 @@
           to map related artists, starting at the Beatles. You can browse the
           artists and their relations by clicking on them.">
           Related Artists Force Diagram</a></h3>
-        <h3><a href="dynamics.html" data-tooltip="Simulating a dynamic spring
+        <h3><a href="motion.html" data-tooltip="Simulating a dynamic spring
           mass system. Press the grey button to start the animation and the dark
           button to stop the animation.">
           Dynamic System Simulation</a></h3>
@@ -54,7 +48,6 @@
         <h3><a href="https://github.com/Sventenhaaf/Ruby-Chess"
           data-tooltip="Developed a Chess game that can be played in the Ruby
           Console.">Ruby Chess</a></h3>
-        <!-- <hr/> -->
       </section>
       <section id="section3">
         <h2>Rails - React - Canvas</h2>
@@ -69,8 +62,6 @@
         <br>
       </section>
     </div>
-
-    <!-- Thanks to codepen.io/brav0 for pointing out that AdBlock Plus blocks the old "social-icons" class: -->
     <!-- <ul class="soc">
       <li><a href="#" class="icon-10 facebook" title="Facebook"><svg viewBox="0 0 512 512"><path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/></svg></a></li>
       <li><a href="#" class="icon-14 googleplus" title="GooglePlus"><svg viewBox="0 0 512 512"><path d="M179.7 237.6L179.7 284.2 256.7 284.2C253.6 304.2 233.4 342.9 179.7 342.9 133.4 342.9 95.6 304.4 95.6 257 95.6 209.6 133.4 171.1 179.7 171.1 206.1 171.1 223.7 182.4 233.8 192.1L270.6 156.6C247 134.4 216.4 121 179.7 121 104.7 121 44 181.8 44 257 44 332.2 104.7 393 179.7 393 258 393 310 337.8 310 260.1 310 251.2 309 244.4 307.9 237.6L179.7 237.6 179.7 237.6ZM468 236.7L429.3 236.7 429.3 198 390.7 198 390.7 236.7 352 236.7 352 275.3 390.7 275.3 390.7 314 429.3 314 429.3 275.3 468 275.3"/></svg></a></li>
@@ -81,10 +72,8 @@
       <li><a href="#" class="icon-27 vimeo" title="Vimeo"><svg viewBox="0 0 512 512"><path d="M420.1 197.9c-1.5 33.6-25 79.5-70.3 137.8 -46.9 60.9-86.5 91.4-118.9 91.4 -20.1 0-37.1-18.5-51-55.6 -9.3-34-18.5-68-27.8-102 -10.3-37.1-21.4-55.7-33.2-55.7 -2.6 0-11.6 5.4-27 16.2L75.7 209.1c17-14.9 33.8-29.9 50.3-44.9 22.7-19.6 39.7-29.9 51.1-31 26.8-2.6 43.3 15.8 49.5 55 6.7 42.4 11.3 68.7 13.9 79 7.7 35.1 16.2 52.7 25.5 52.7 7.2 0 18-11.4 32.5-34.2 14.4-22.8 22.2-40.1 23.2-52.1 2.1-19.7-5.7-29.5-23.2-29.5 -8.3 0-16.8 1.9-25.5 5.7 16.9-55.5 49.3-82.4 97.1-80.9C405.5 130 422.2 153 420.1 197.9z"/></svg></a></li>
       <li><a href="#" class="icon-28 youtube" title="YouTube"><svg viewBox="0 0 512 512"><path d="M422.6 193.6c-5.3-45.3-23.3-51.6-59-54 -50.8-3.5-164.3-3.5-215.1 0 -35.7 2.4-53.7 8.7-59 54 -4 33.6-4 91.1 0 124.8 5.3 45.3 23.3 51.6 59 54 50.9 3.5 164.3 3.5 215.1 0 35.7-2.4 53.7-8.7 59-54C426.6 284.8 426.6 227.3 422.6 193.6zM222.2 303.4v-94.6l90.7 47.3L222.2 303.4z"/></svg>/a></li>
     </ul> -->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <!-- <script src="_/d3.min.js"></script> -->
-
-    <script src="custom.js">
+    <script src="js/d3.min.js" charset="utf-8"></script>
+    <script src="js/index.js">
     </script>
   </body>
 </html>
