added waterfall chart

--- a/algorithms.html
+++ b/algorithms.html
@@ -31,7 +31,7 @@
         the array, comparing two items, and swaps them if the left-hand item is
         bigger than the right-hand item.
       </h3>
-      <h3><a href="#">Time complexity</a> is O(n<sup>2</sup>).</h3>
+      <h3><a href="https://en.wikipedia.org/wiki/Time_complexity">Time complexity</a> is O(n<sup>2</sup>).</h3>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-8" id="bubblesort"></div>
 
@@ -46,7 +46,7 @@
         puts all smaller items to its left and all bigger items to its right.
         Then it recursively continues this process for each left and right half.
       </h3>
-      <h3><a href="#">Time complexity</a> is O(n log n).</h3>
+      <h3><a href="https://en.wikipedia.org/wiki/Time_complexity">Time complexity</a> is O(n log n).</h3>
 
 
   </div>
