--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           to map related artists, starting at the Beatles. You can browse the
           artists and their relations by clicking on them.">
           Related Artists Force Diagram</a></h3>
+        <h3><a href="financial.html" data-tooltip="Made an interactive Waterfall
+          chart of the Annual Report of Google 2014, using D3 only.">
+          Income Statement</a></h3>
         <h3><a href="motion.html" data-tooltip="Simulating a dynamic spring
           mass system. Press the grey button to start the animation and the dark
           button to stop the animation.">
