--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
     </header>
     <div id="content">
       <section id="section1">
-        <h2>Javascript - D3 - React</h2>
+        <h2>Work</h2>
+        <h3><a href="https://packhunt.io/" data-tooltip="Parametric Design in the Browser">
+          Packhunt</a></h3>
+        <h3><a href="https://www.adcombi.com/" data-tooltip="Digital Marketing Platform">
+          Adcombi</a></h3>
+        <h3><a href="http://gorgeous-line.surge.sh/"
+          data-tooltip="Artist booking app. Built with Rails and React. Including automatic contract generator. Contact me if you want to have a test login.">
+          Bookr</a></h3>
+      </section>
+      <section id="section2">
+        <h2>Experiments</h2>
+        <h3><a href="https://devblog.uber.com/uber-slack-a-weekend-a-story-of-open-apis/"
+          data-tooltip="Over the weekend, with a team of 10 App Academy
+          students, we used the Uber and Slack APIs to build an app that lets
+          you request an Uber ride using a slack command - no need to pull out
+          your phone anymore." target="_blank">
+          Uber-Slack</a></h3>
         <h3><a href="algorithms.html" data-tooltip="Using D3.js to visualize
           sorting algorithms.">
           Algorithm Visulalizations</a></h3>
@@ -46,29 +62,10 @@
           data-tooltip="Full-Stack application using Rails and React, that lets
           users write and run Javascript in the browser, and like and share
           their code snippets withother people." target="_blank">CodeSven</a></h3>
-      </section>
-      <section id="section2">
-        <h2>Projects</h2>
-        <h3><a href="https://devblog.uber.com/uber-slack-a-weekend-a-story-of-open-apis/"
-          data-tooltip="Over the weekend, with a team of 10 App Academy
-          students, we used the Uber and Slack APIs to build an app that lets
-          you request an Uber ride using a slack command - no need to pull out
-          your phone anymore." target="_blank">
-          Uber-Slack</a></h3>
-        <h3><a href="http://gorgeous-line.surge.sh/"
-          data-tooltip="Full functional artist booking app in the making. Built with a Rails 
-          API only backend and React frontend. Including automatic contract generator." target="_blank">
-          Bookr</a></h3>
         <h3><a href="https://github.com/Sventenhaaf/Ruby-Chess"
           data-tooltip="Developed a Chess game that can be played in the Ruby
           Console.">Ruby Chess</a></h3>
       </section>
-<!--       <section id="section3">
-        <h2>Rails - React - Canvas</h2>
-        <h3></h3>
-        
-        <br>
-      </section> -->
     </div>
     <!-- <ul class="soc">
       <li><a href="#" class="icon-10 facebook" title="Facebook"><svg viewBox="0 0 512 512"><path d="M211.9 197.4h-36.7v59.9h36.7V433.1h70.5V256.5h49.2l5.2-59.1h-54.4c0 0 0-22.1 0-33.7 0-13.9 2.8-19.5 16.3-19.5 10.9 0 38.2 0 38.2 0V82.9c0 0-40.2 0-48.8 0 -52.5 0-76.1 23.1-76.1 67.3C211.9 188.8 211.9 197.4 211.9 197.4z"/></svg></a></li>
