--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Sven ten Haaf | Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 600px)" href="css/mobile.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 601px)" href="css/main.css" />
+
     <link rel="icon" href="favicon-32x32.png">
   </head>
   <body>
@@ -33,7 +36,7 @@
           data-tooltip="Artist booking app. Built with Rails and React. Including automatic contract generator. Contact me if you want to have a test login.">
           Bookr</a></h3>
       </section>
-      <section id="section2">
+      <section id="section2"> 
         <h2>Experiments</h2>
         <h3><a href="https://devblog.uber.com/uber-slack-a-weekend-a-story-of-open-apis/"
           data-tooltip="Over the weekend, with a team of 10 App Academy
