--- a/newIndex.html
+++ b/newIndex.html
@@ -31,14 +31,14 @@
           <a href="#envelope"><h2>Envelope</h2></a>
           <a href="#postcodes"><h2>Postal Codes</h2></a>
           <a href="#dashboards"><h2>Dashboards</h2></a>
-          <h2>Packhunt</h2>
-          <h2>Adcombi</h2>
+          <a href="#packhunt"><h2>Packhunt</h2></a>
+          <a href="#adcombi"><h2>Adcombi</h2></a>
         <h1>Experiments</h1>
-          <h2>Algorithm Visulalizations</h2>
-          <h2>Uber-Slack</h2>
-          <h2>Artists Force Diagram</h2>
-          <h2>Dynamic System Simulation</h2>
-          <h2>Moonshot</h2>
+          <a href="#algo"><h2>Algorithm Visulalizations</h2></a>
+          <a href="#uber"><h2>Uber-Slack</h2></a>
+          <a href="#artists"><h2>Artists Force Diagram</h2></a>
+          <a href="#motion"><h2>Dynamic System Simulation</h2></a>
+          <a href="#moon"><h2>Moonshot</h2></a>
           <br/>
           <br/>
 
@@ -94,7 +94,7 @@
       </div>
 
       <div id="dashboards" class="six">
-        <div class="container">
+        <a href="https://www.methetnet.nl/" target="_blank"><div class="container">
           <img class="bigpic" src="./img/mhn.png" alt="">
           <div class="overlay">
             <h1 class="h1text">Dashboards</h1>
@@ -110,12 +110,12 @@
               the energy sector.
             </div>
           </div>
-        </div>
+        </div></a>
         </img>
       </div>
 
-      <div class="seven">
-        <div class="container">
+      <div id="packhunt" class="seven">
+        <a href="https://packhunt.io/" target="_blank"><div class="container">
           <img class="bigpic" src="./img/packhunt.png" alt="">
           <div class="overlay">
             <h1 class="h1text">Packhunt</h1>
@@ -129,13 +129,13 @@
               <div class="role">product manager @ White Lioness Technologies | 2016-2017</div>
             </div>
           </div>
-        </div>
+        </div></a>
         </img>
       </div>
 
-      <div class="eight">
+      <div id="adcombi" class="eight">
         <div class="container">
-          <img class="bigpic" src="./img/adcombi.png" alt="">
+          <a href="https://www.adcombi.com/" target="_blank"><img class="bigpic" src="./img/adcombi.png" alt="">
           <div class="overlay">
             <h1 class="h1text">AdCombi</h1>
             <div class="text">SEAMLESS AD-TECHNOLOGY COMBINATION
@@ -149,7 +149,7 @@
             </div>
           </div>
         </div>
-        </img>
+      </img></a>
       </div>
 
 
@@ -157,8 +157,8 @@
 
           <!-- <div class="nine"><hr/></div> -->
 
-          <div class="nine">
-            <div class="container">
+          <div id="algo" class="nine">
+            <a href="./algorithms.html" target="_blank"><div class="container">
               <img class="bigpic" src="./img/algo.png" alt="">
               <div class="overlay">
                 <h1 class="h1text">Sorting Algorithm Visualisation</h1>
@@ -176,15 +176,16 @@
                 </div>
 
               </div>
-            </div>
+            </div></a>
             </img>
           </div>
 
 
 
 
-          <div class="ten">
-            <div class="container">
+          <div id="uber" class="ten">
+
+            <a href="https://uber-developers.news/uber-slack-weekend-a-story-of-open-apis-3dd6ca424113" target="_blank"><div class="container">
               <img class="bigpic" src="./img/uber.jpeg" alt="">
               <div class="overlay">
                 <h1 class="h1text">Uber Slack</h1>
@@ -201,14 +202,14 @@
                 </div>
 
               </div>
-            </div>
+            </div></a>
             </img>
           </div>
 
 
 
-          <div class="eleven">
-            <div class="container">
+          <div id="artists" class="eleven">
+            <a href="./connectedartists.html" target="_blank"><div class="container">
               <img class="bigpic" src="./img/artists.png" alt="">
               <div class="overlay">
                 <h1 class="h1text">Force diagrams</h1>
@@ -216,21 +217,21 @@
                   Showcasing force layout together with a connection to the Last.fm
                   API.
                   <br/><br/><br/>
-                  Before the Beatles, there was nothing. Or actually, it was
-                  before Elvis, according to John Lennon. Nevertheless, the
-                  Beatles are the start of a journey through musical acts and
+                  Before the Beatles, there was nothing. Or before Elvis (according
+                  to John Lennon himself) ?  Nevertheless, the
+                  Beatles are the start of this journey through musical acts and
                   their relations. Click on an act to see their ten most important
                   connections with other artists. On the top, you can see some
                   details about the act you just clicked.
                 </div>
               </div>
-            </div>
+            </div></a>
             </img>
           </div>
 
 
-          <div class="twelve">
-            <div class="container">
+          <div id="motion" class="twelve">
+            <a href="./motion.html" target="_blank"><div class="container">
               <img class="bigpic" src="./img/dynamicsSlim.png" alt="">
               <div class="overlay">
                 <h1 class="h1text">Dynamics simulation</h1>
@@ -244,11 +245,11 @@
                   <br/><br/><br/>
                 </div>
               </div>
-            </div>
+            </div></a>
             </img>
           </div>
 
-          <div class="thirteen">
+          <div id="moon" class="thirteen">
             <div class="container">
               <img class="bigpic" src="./img/moon.png" alt="">
               <div class="overlay">
@@ -256,7 +257,7 @@
                 <div class="text">
                   Work in Progress
                   <br/><br/>
-                  Click and drag the
+                  Click and drag the grey asteroid to shoot it to the moon.
                   <br/><br/><br/>
                 </div>
               </div>
@@ -267,11 +268,9 @@
 
 
 
-
     </div>
 
 
-  </div>
 
     <script src="js/d3.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
