--- a/algorithms.html
+++ b/algorithms.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>D3 Graphic</title>
+  <title>Algorithms</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/grid.css">
 
