adjusted links in icons and trying good hover state

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <br/><hr id="delay1"/>
           <h1 id="delay2">Sven ten Haaf</h1>
           <h3 id="delay3">Data Visualisation | Application Development </h3>
-          <a id="delay4" href=""><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
-          <a id="delay5" href=""><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
-          <a id="delay6" href=""><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+          <a id="delay4" href="mailto:sventenhaaf@envelope.li"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a>
+          <a id="delay5" href="https://www.linkedin.com/in/sventenhaaf/" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+          <a id="delay6" href="https://github.com/sventenhaaf" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
       </div>
 
 
@@ -74,8 +74,8 @@
                 aims to fix this.
                 <br/><br/>
                 Envelope is a place where people with coding skills can go to
-                build their portfolio and share software tools with the rest of
-                the world, while people without coding skills can go there and
+                build a portfolio and share software tools with the rest of
+                the world, while people without coding skills can go here and
                 use these tools to create their own insights and their own
                 visualisations, using their own input and their own data.
                 <br/><br/>
